--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding:0 ;
-    background-image: url("/assets/bekky-bekks-wFgEAQck6mw-unsplash.jpg");
+    background-image: url(https://images.unsplash.com/photo-1609378800753-6a3c08233b51?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
     background-size: cover;
     z-index: 0;
 }
